--- a/.gitignore
+++ b/.gitignore
@@ -117,9 +117,10 @@ Thumbs.db
 *.lnk
 
 #    #######################
-#             HUNTER-GHOST-27
+#        HUNTER-GHOST-27
 #    #######################
 
+.vscode
 *.code-workspace
 .markdownlint.json
 
