Update md2steam workflow

--- a/.gitub/workflows/md2steam.yaml
+++ b/.gitub/workflows/md2steam.yaml
@@ -51,6 +51,9 @@ jobs:
           # Target directory
           outDir: "."
 
+          # The commit message
+          commitMessage: "Update Steam BB-Content"
+
         # Environment Variables
         # ---------------------
 
